--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -1,6 +1,8 @@
 <div class="flex-custom flex-custom--center">
+  <button md-icon-button (click)="toggleSearchInput(searchInputField)"><md-icon>search</md-icon></button>
+
   <div class="search-container">
-    <md-input-container class="input-orange" [ngClass]="{'search-visible': searchVisible}">
+    <md-input-container [ngClass]="{'search-visible': searchVisible}">
       <input
         #searchInputField
         md-input
@@ -10,6 +12,4 @@
         (keydown)="onKey($event)">
     </md-input-container>
   </div>
-
-  <button md-icon-button (click)="toggleSearchInput(searchInputField)"><md-icon>search</md-icon></button>
 </div>
