redesign image uploader

--- a/src/app/dialog-modals/image-dialog/image-dialog.component.html
+++ b/src/app/dialog-modals/image-dialog/image-dialog.component.html
@@ -1,23 +1,9 @@
 <div class="dialog-container">
-  <md-icon [class.close-edit]="editMode" (click)="close()">clear</md-icon>
-  <img [class.image-edit]="editMode" src="{{image.path}}" alt="">
+  <md-icon (click)="close()">clear</md-icon>
+  <img src="{{image.path}}" alt="">
 
-  <ng-container *ngIf="editMode">
-
-    <md-input-container>
-      <input md-input placeholder="{{'PRODUCT_IMAGE_VIEW_NAME' | translate}}" [(ngModel)]="image.name" type="text">
-    </md-input-container>
-
-
-    <md-textarea placeholder="{{'PRODUCT_IMAGE_VIEW_DESCRIPTION' | translate}}" [(ngModel)]="image.description"></md-textarea>
-
-    <div class="chbox flex-custom flex-custom--center">
-      <md-checkbox [checked]="image.defaultImage" (change)="image.defaultImage = !image.defaultImage"></md-checkbox>
-      <span>{{'PRODUCT_IMAGE_VIEW_DEFAULT' | translate}}</span>
-    </div>
-
-    <div class="buttons">
-      <div (click)="save()">{{'PRODUCT_IMAGE_VIEW_SAVE' | translate}}</div>
-    </div>
-  </ng-container>
+  <div class="description">
+    <div>{{image.name}}</div>
+    <div>{{image.description}}</div>
+  </div>
 </div>
