--- a/src/app/pages/products-page/product-view/product-images/product-images.component.scss
+++ b/src/app/pages/products-page/product-view/product-images/product-images.component.scss
@@ -1,12 +1,13 @@
 .container {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .image-upload {
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 25px 14px 65px;
 
   input {
     font-size: 14px;
@@ -15,30 +16,70 @@
 
 .image-container {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .entity-view__card {
   min-width: 270px;
 }
 
+.image-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 28px;
+  border-bottom: 2px solid rgba(0,0,0,0.08);
+
+  &:last-of-type {
+    border-bottom: 0;
+  }
+}
+
+.image-checkbox {
+  font-size: 12px;
+  margin-top: 22px;
+  margin-bottom: 24px;
+  color: #4A4A4A;
+}
+
+.image-actions {
+  margin-top: auto;
+  display: flex;
+  font-size: 11px;
+
+  div {
+    cursor: pointer;
+    color: #4A4A4A;
+
+    &:first-of-type {
+      margin-left: auto;
+    }
+
+    &:last-of-type {
+      margin-left: 8px;
+      color: #5B9BE1;
+    }
+  }
+}
+
+.image-details {
+  display: flex;
+  flex-direction: column;
+  margin: 0 15px 0 35px;
+  width: 280px;
+
+  md-input-container {
+    font-size: 14px;
+    width: 95%;
+  }
+}
+
 .image-wrapper {
   position: relative;
-  margin: 10px;
-  width: calc(33.3% - 20px);
-
-  @media only screen and (max-width: 1100px) {
-    width: calc(50% - 20px);
-  }
-
-  @media only screen and (max-width: 760px) {
-    width: calc(100% - 20px);
-  }
+  width: 180px;
 
   img {
     display: flex;
-    width: 100%;
+    width: 180px;
   }
 }
 
@@ -54,9 +95,9 @@
   md-icon {
     display: none;
     margin: auto;
-    width: 42px;
-    height: 42px;
-    font-size: 42px;
+    width: 32px;
+    height: 32px;
+    font-size: 32px;
     color: white;
     cursor: pointer;
   }
@@ -71,9 +112,9 @@
 }
 
 .dropzone {
-  min-height: 100px;
-  border: 2px dotted rgba(0,0,0,0.3);
-  background: rgba(0,0,0,0.05);
+  min-height: 170px;
+  border: 2px dotted rgba(0,0,0,0.08);
+  background: #F5F5F5;
   text-align: center;
 
   &--file-over {
@@ -90,9 +131,11 @@
     }
   }
 
-  span {
+  &__text {
     margin: auto;
-    font-size: 14px;
+    font-size: 16px;
+    color: rgba(0,0,0,0.5);
+    font-weight: 500;
     line-height: 100px;
   }
 
@@ -107,10 +150,11 @@
 
 .select {
   margin: 8px 0 0;
-  padding: 5px 10px;
+  padding: 5px 12px;
   background: #5B9BE1;
+  border-radius: 3px;
   color: #FFFFFF;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
   cursor: pointer;
 
@@ -121,9 +165,14 @@
 
 .gallery-container {
   max-width: 100%;
-  width: 810px;
 }
 
 .upload-container {
-  width: 300px;
+  width: 360px;
+}
+
+.no-data {
+  padding: 25px 55px;
+  font-size: 14px;
+  color: #4a4a4a;
 }
