--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -6,7 +6,7 @@
       <input
         #searchInputField
         md-input
-        placeholder="{{'TOPNAV_SEARCH' | translate}}"
+        placeholder="{{'INDEXPAGE_SEARCH' | translate}}"
         type="text"
         [(ngModel)]="searchValue"
         (keydown)="onKey($event)">
