--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -1,13 +1,11 @@
 <div class="entity-index">
   <div class="entity-index__title">
     {{'PRODUCT_INDEX_TITLE' | translate}}
-    <search-input class="entity-index__search" (onSearch)="setSearchString($event)"></search-input>
-    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
 
-  <md-card class="entity-index__card">
+  <md-card class="entity-index__card entity-index__card--light-shadow">
     <md-card-content class="entity-index__card__content">
 
       <entities-table
@@ -32,7 +30,10 @@
         [nextDisabled]="!hasMorePages()"
         (previous)="previous()"
         (next)="next()"
-        (updateLimit)="updateLimit($event)">
+        (updateLimit)="updateLimit($event)"
+        (filterChanged)="filterValue = $event"
+        (searchChanged)="setSearchString($event)"
+      >
       </entities-table>
     </md-card-content>
   </md-card>
