--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -1,8 +1,6 @@
 <div class="entity-index">
   <div class="entity-index__title">
     {{'TRANSACTION_INDEX_TITLE' | translate}}
-    <search-input class="entity-index__search" (onSearch)="setSearchString($event)"></search-input>
-    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
   <md-card class="entity-index__card">
@@ -30,7 +28,10 @@
         [nextDisabled]="!hasMorePages()"
         (previous)="previous()"
         (next)="next()"
-        (updateLimit)="updateLimit($event)">
+        (updateLimit)="updateLimit($event)"
+        (filterChanged)="filterValue = $event"
+        (searchChanged)="setSearchString($event)"
+      >
       </entities-table>
 
     </md-card-content>
