--- a/src/app/pages/users-page/users-index/users.component.html
+++ b/src/app/pages/users-page/users-index/users.component.html
@@ -1,8 +1,6 @@
 <div class="entity-index">
   <div class="entity-index__title">
     {{'USER_INDEX_TITLE' | translate}}
-    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
-    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission() && authService.isActiveAclMasterAccount()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
@@ -33,7 +31,10 @@
         [nextDisabled]="!hasMorePages()"
         (previous)="previous()"
         (next)="next()"
-        (updateLimit)="updateLimit($event)">
+        (updateLimit)="updateLimit($event)"
+        (filterChanged)="filterValue = $event"
+        (searchChanged)="setSearchString($event)"
+      >
       </entities-table>
 
     </md-card-content>
