--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -20,3 +20,12 @@
     background-color: #20A2D1 !important;
   }
 }
+
+md-tab-body {
+  overflow-x: visible !important;
+  overflow-y: visible !important;
+}
+
+.md-tab-body-wrapper {
+  overflow: visible !important;
+}
