--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -56,7 +56,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [title]="'PRODUCTSCHEDULE_TITLE' | translate" [cardsExpression]="'300px;l'"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [title]="'PRODUCTSCHEDULE_TITLE' | translate" [cardsExpression]="'300px'"></spe-loader>
 </ng-template>
 
 
