--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -256,4 +256,9 @@ dropdown-component {
     background-color: #4A90E2;;
   }
 }
+.checkbox-standalone {
+  .md-checkbox-inner-container {
+    margin: auto;
+  }
+}
 
