--- a/src/app/pages/components/table-advanced/table-advanced.component.html
+++ b/src/app/pages/components/table-advanced/table-advanced.component.html
@@ -7,6 +7,15 @@
                          [hasWritePermission]="hasWritePermission"
                          [columnParams]="columnParams"
                          [density]="density"
+                         [addEnabled]="addEnabled"
+                         [showPagination]="showPagination"
+                         [paginationValues]="paginationValues"
+                         [limit]="limit"
+                         [previousDisabled]="page <= 0"
+                         [nextDisabled]="!hasMorePages()"
+                         (previous)="previous()"
+                         (next)="next()"
+                         (limitChanged)="updateLimit($event)"
                          (filterStringChanged)="filterString = $event"
                          (densitySelected)="density = $event"
                          (addModeSelected)="setAddMode()">
@@ -23,7 +32,10 @@
             <th (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--align-center]="params.align === 'center'">
               <ng-container *ngIf="params.showLabel">
                 {{params.label | translate}}
-                <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+                <ng-container *ngIf="params.sortEnabled">
+                  <md-icon [class.icon-applied]="params.sortApplied && params.sortOrder === 'asc'" class="up-icon">arrow_drop_up</md-icon>
+                  <md-icon [class.icon-applied]="params.sortApplied && params.sortOrder === 'desc'" class="down-icon">arrow_drop_down</md-icon>
+                </ng-container>
               </ng-container>
             </th>
           </ng-container>
@@ -39,7 +51,7 @@
           <ng-container *ngFor="let params of columnParams">
             <ng-container *ngIf="params.selected">
               <td [class.cell--align-right]="params.align === 'right'" [class.cell--align-center]="params.align === 'center'" [class.cell-image]="params.inputType === inputTypes.IMAGE">
-                <div class="cell-wrapper">
+                <div class="cell-wrapper" [class.flex-custom]="params.inputType === inputTypes.IMAGE">
 
                   <ng-container *ngIf="params.translate; else notranslate">
                     {{params.mappingFunction(entity) | translate}}
@@ -47,7 +59,7 @@
 
                   <ng-template #notranslate>
                     <ng-container *ngIf="params.inputType === inputTypes.BOOLEAN; else nobool">
-                      <md-checkbox class="checkbox-blue" [checked]="params.mappingFunction(entity)" [disabled]="!params.editable || !entity.inlineEditMode"></md-checkbox>
+                      <md-checkbox class="checkbox-blue checkbox-standalone" [checked]="params.mappingFunction(entity)" [disabled]="!params.editable || !entity.inlineEditMode"></md-checkbox>
                     </ng-container>
                   </ng-template>
 
@@ -67,16 +79,22 @@
 
                   <ng-template #noimage>
                     <ng-container *ngIf="!entity.inlineEditMode; else editinput">
-                      <span *ngIf="params.prefix">{{params.prefix}}</span>
                       {{params.mappingFunction(entity)}}
                     </ng-container>
                   </ng-template>
 
                   <ng-template #editinput>
                     <div class="placeholder">{{params.label | translate}}</div>
-                    <span *ngIf="params.prefix">{{params.prefix}}</span>
-                    <md-input-container [class.error]="editInvalid && !params.validator(entity)" [class.numeric-container]="params.inputType === inputTypes.NUMERIC">
-                      <input md-input (keydown)="keydown($event, params)" type="text" [value]="params.mappingFunction(entity)" (input)="params.assigningFunction(entity, $event.srcElement.value)" [disabled]="!params.editable">
+                    <ng-container *ngIf="params.inputType === inputTypes.CURRENCY; else nocurrency">
+                      <md-input-container class="numeric-container" [class.error]="editInvalid && !params.validator(entity)">
+                        <input #currencyinput md-input type="text" (keydown)="keydown($event, params)" [disabled]="!params.editable" [value]="params.mappingFunction(entity)" [textMask]="{mask: numberMask, guide: false}">
+                      </md-input-container>
+                    </ng-container>
+                  </ng-template>
+
+                  <ng-template #nocurrency>
+                    <md-input-container [class.error]="editInvalid && !params.validator(entity)" [class.numeric-container]="params.inputType === inputTypes.NUMERIC || params.inputType === inputTypes.CURRENCY">
+                      <input md-input type="text" (keydown)="keydown($event, params)" [disabled]="!params.editable" [value]="params.mappingFunction(entity)" (input)="params.assigningFunction(entity, $event.srcElement.value)">
                     </md-input-container>
                   </ng-template>
 
@@ -98,8 +116,8 @@
               </td>
             </ng-container>
           </ng-container>
-          <td>
-            <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
+          <td class="row-options-cell">
+            <md-icon class="row-options" [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
             <md-menu #actionsMenu="mdMenu" x-position="before">
               <button *ngIf="viewEnabled" md-menu-item (click)="view(entity)">{{textOptions.viewOptionText | translate}}</button>
               <button *ngIf="editEnabled && hasWritePermission" md-menu-item (click)="edit(entity)">{{textOptions.editOptionText | translate}}</button>
@@ -125,7 +143,7 @@
           <ng-container *ngFor="let params of columnParams">
             <ng-container *ngIf="params.selected">
               <td [class.cell--align-right]="params.align === 'right'" [class.cell--align-center]="params.align === 'center'" [class.cell-image]="params.inputType === inputTypes.IMAGE">
-                <div class="cell-wrapper">
+                <div class="cell-wrapper" [class.flex-custom]="params.inputType === inputTypes.IMAGE">
 
                   <ng-container *ngIf="params.inputType === inputTypes.AUTOCOMPLETE; else noauto">
                     <div class="placeholder">{{params.label | translate}}</div>
@@ -148,18 +166,25 @@
 
                   <ng-template #noimage>
                     <ng-container *ngIf="params.inputType === inputTypes.BOOLEAN; else nobool">
-                      <md-checkbox class="checkbox-blue" [checked]="params.mappingFunction(entity)" [disabled]="!params.editable"></md-checkbox>
+                      <md-checkbox class="checkbox-blue checkbox-standalone" [checked]="params.mappingFunction(entity)" [disabled]="!params.editable"></md-checkbox>
                     </ng-container>
                   </ng-template>
 
                   <ng-template #nobool>
                     <div class="placeholder">{{params.label | translate}}</div>
-                    <span *ngIf="params.prefix">{{params.prefix}}</span>
-                    <md-input-container [class.error]="addInvalid && !params.validator(entity)" [class.numeric-container]="params.inputType === inputTypes.NUMERIC">
+
+                    <ng-container *ngIf="params.inputType === inputTypes.CURRENCY; else nocurrency">
+                      <md-input-container class="numeric-container" [class.error]="addInvalid && !params.validator(entity)">
+                        <input #currencyinput md-input type="text" (keydown)="keydown($event, params)" [disabled]="!params.editable" [value]="params.mappingFunction(entity)" [textMask]="{mask: numberMask, guide: false}">
+                      </md-input-container>
+                    </ng-container>
+                  </ng-template>
+
+                  <ng-template #nocurrency>
+                    <md-input-container [class.error]="addInvalid && !params.validator(entity)" [class.numeric-container]="params.inputType === inputTypes.NUMERIC || params.inputType === inputTypes.CURRENCY">
                       <input md-input type="text" (keydown)="keydown($event, params)" [disabled]="!params.editable" [value]="params.mappingFunction(entity)" (input)="params.assigningFunction(entity, $event.srcElement.value)">
                     </md-input-container>
                   </ng-template>
-
                 </div>
               </td>
             </ng-container>
