--- a/src/app/pages/components/table-advanced/table-advanced.component.scss
+++ b/src/app/pages/components/table-advanced/table-advanced.component.scss
@@ -55,7 +55,9 @@ td {
 }
 
 img {
-  width: 45px;
+  margin: auto;
+  max-width: 45px;
+  max-height: 45px;
   border-radius: 50%;
 }
 
@@ -77,37 +79,19 @@ img {
   overflow: visible;
 }
 
-.density {
+.row-options-cell {
+  padding: 4px !important;
+}
 
-  &--s {
-    img {
-      width: 35px;
-    }
+.row-options {
+  color: white !important;
+}
 
-    .cell-image {
-      padding-top: 1px !important;
-      padding-bottom: 1px !important;
-    }
-
-    td {
-      padding-top: 1px;
-      padding-bottom: 1px;
-    }
-  }
-
-  &--m {
-
-  }
-
-  &--l {
-    .cell-image {
-      padding-top: 16px !important;
-      padding-bottom: 16px !important;
-    }
-
-    td {
-      padding-top: 20px;
-      padding-bottom: 20px;
+tr {
+  &:hover {
+    .row-options {
+      display: block;
+      color: rgba(0, 0, 0, 0.4) !important;
     }
   }
 }
