--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -33,10 +33,6 @@ $title-color: #8D8888;
     background: white;
   }
 
-  &__filter {
-    margin-left: auto;
-  }
-
   &__add {
     position: absolute !important;
     top: 45px;
@@ -148,7 +144,7 @@ $title-color: #8D8888;
 
       tr th {
         position: relative;
-        padding: 10px 5px !important;
+        padding: 10px 20px 10px 5px !important;
         font-weight: 400;
         cursor: pointer;
 
@@ -162,7 +158,58 @@ $title-color: #8D8888;
 
         md-icon {
           position: absolute;
-          bottom: 6px;
+          width: 18px;
+          height: 18px;
+          font-size: 18px;
+          cursor: pointer;
+          color: rgba(0,0,0,0.25);
+        }
+
+        .up-icon {
+          top: 4px;
+        }
+
+        .down-icon {
+          top: 10px;
+        }
+
+        .icon-applied {
+          color: rgba(0,0,0,0.65);
+        }
+      }
+    }
+
+    .density {
+
+      &--s {
+        img {
+          width: 35px;
+        }
+
+        .cell-image {
+          padding-top: 1px !important;
+          padding-bottom: 1px !important;
+        }
+
+        td {
+          padding-top: 1px;
+          padding-bottom: 1px;
+        }
+      }
+
+      &--m {
+
+      }
+
+      &--l {
+        .cell-image {
+          padding-top: 16px !important;
+          padding-bottom: 16px !important;
+        }
+
+        td {
+          padding-top: 20px;
+          padding-bottom: 20px;
         }
       }
     }
@@ -172,6 +219,16 @@ $title-color: #8D8888;
 
       tr {
         border-bottom: solid 1px #d0d0d0;
+
+        table-actions {
+          color: white;
+        }
+
+        &:hover {
+          table-actions {
+            color: rgba(0,0,0,0.6);
+          }
+        }
       }
 
       tr td {
@@ -193,6 +250,10 @@ $title-color: #8D8888;
     }
   }
 
+  &__preferences {
+    margin-left: 5px;
+  }
+
   &__pagination {
 
     &__buttons {
@@ -200,6 +261,12 @@ $title-color: #8D8888;
       margin-right: 15px;
       text-align: right;
       color: #757575;
+    }
+
+    &--no-margin {
+      .entity-index__pagination__buttons {
+        margin: 0;
+      };
     }
   }
 }
