--- a/src/app/shared/components/spe-loader/spe-loader.component.html
+++ b/src/app/shared/components/spe-loader/spe-loader.component.html
@@ -1,7 +1,12 @@
 <div class="entity-view">
 
   <div class="entity-view__title">
-    <div class="dummy-title">{{title}}</div>
+    <div class="dummy-title">{{title}}
+      <ng-container *ngIf="showBreadcrumb">
+        <md-icon>keyboard_arrow_right</md-icon>
+        <span class="dummy-title-id"></span>
+      </ng-container>
+    </div>
   </div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
