--- a/src/app/shared/components/spe-loader/spe-loader.component.scss
+++ b/src/app/shared/components/spe-loader/spe-loader.component.scss
@@ -41,3 +41,11 @@
 .dummy-card-icon {
   margin-left: auto;
 }
+
+.dummy-title-id {
+  display: inline-block;
+  vertical-align: middle;
+  height: 24px;
+  width: 180px;
+  background: rgba(0,0,0,0.12);
+}
